Optimized canonical mode now fast enough

--- a/trunk/glade/widget_pray.glade
+++ b/trunk/glade/widget_pray.glade
@@ -138,6 +138,7 @@
 DH
 KL
 Mirror
+Canonical
 GeMS DMs
 Grid
 </property>
@@ -227,7 +228,7 @@ Gaussian
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">&#x2022;</property>
                                         <property name="adjustment">1 0.10000000000000001 10 0.10000000000000001 1 0</property>
-                                        <property name="digits">2</property>
+                                        <property name="digits">1</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -286,7 +287,6 @@ Gaussian
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">&#x2022;</property>
                                         <property name="adjustment">15 0.10000000000000001 100 0.10000000000000001 0 0</property>
-                                        <property name="digits">2</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
